# sparse-merkle-tree

./: .gitignore  Cargo.toml  Makefile  README.md  SMT.md  build.rs
.github/workflows/: release.yml  rust.yml  wasm.yml
benches/: smt_benchmark.rs  store_counter_benchmark.rs
c/: ckb_smt.h
c/rust-tests/: Cargo.toml  build.rs
c/rust-tests/proptest-regressions/tests/: smt.txt
c/rust-tests/src/tests/: blake2b_decl_only.h  ckb_smt.c  mod.rs  smt.rs
crates/smt/: Cargo.toml  build.rs
crates/smt-rocksdb/: Cargo.toml
crates/smt-rocksdb/benches/: smt_rocksdb_benchmark.rs
crates/smt-rocksdb/src/: config.rs  db.rs  iter.rs  lib.rs  read_only_db.rs  snapshot.rs  transaction.rs  write_batch.rs
crates/smt-rocksdb/src/smt/: db.rs  mod.rs  serde.rs  smt_store.rs
crates/smt-rocksdb/src/traits/: kv_store.rs  mod.rs
crates/smt/proptest-regressions/tests/: tree.txt
crates/smt/src/: ckb_smt.rs  default_store.rs  h256.rs
fixtures/basic/: case-0.json  case-1.json  case-10.json  case-11.json  case-12.json  case-13.json  case-14.json  case-15.json  case-16.json  case-17.json  case-18.json  case-19.json  case-2.json  case-20.json  case-21.json  case-22.json  case-23.json  case-24.json  case-25.json  case-26.json  case-27.json  case-28.json  case-29.json  case-3.json  case-30.json  case-31.json  case-32.json  case-33.json  case-34.json  case-35.json  case-36.json  case-37.json  case-38.json  case-39.json  case-4.json  case-40.json  case-41.json  case-42.json  case-43.json  case-44.json  (+60 more)
proptest-regressions/tests/: smt.txt  tree.txt
src/: blake2b.rs  blake2b_decl_only.h  branch.rs  ckb_smt.c  ckb_smt.rs  default_store.rs  error.rs  h256.rs  lib.rs  merge.rs  merkle_proof.rs  proof.rs  sha256.rs  store.rs  traits.rs  tree.rs  trie_tree.rs  types.rs
src/tests/: counter.rs  fixtures.rs  history.rs  mod.rs  smt.rs  tree.rs  utils.rs
wasm/: .gitignore  Cargo.toml  Makefile  README.md
wasm/examples/: index.html
wasm/src/: lib.rs
wasm/tests/: jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
wasm/tests/ckb-contract/: build.ts  package.json  pnpm-lock.yaml  tsconfig.base.json
wasm/tests/ckb-contract/src/: index.ts
wasm/tests/src/: misc.ts
wasm/tests/tests/: smt-ckb.test.ts  smt.test.ts
