[package]
name = "sparse-merkle-tree"
version = "0.5.3"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/nervosnetwork/sparse-merkle-tree"
description = "Sparse merkle tree implement in rust"
exclude = ["/fixtures", "/proptest-regressions"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
cfg-if = "0.1"
blake2b-rs = "0.2"

[dev-dependencies]
proptest = "0.9"
criterion = "0.2"
rand = "0.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[[bench]]
name = "smt_benchmark"
harness = false

[build-dependencies]
cc = "1.0"
