[package]
name = "sparse-merkle-tree"
version = "0.6.2"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/nervosnetwork/sparse-merkle-tree"
description = "Sparse merkle tree implement in rust"
include = [
  "/src",
  "/benches",
  "/build.rs",
  "/c/deps/ckb-c-stdlib",
  "/c/ckb_smt.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "with-blake2b-rs"]
std = []

# SMT implemented in C
smtc = ["build-with-clang"]
# used with feature "smtc"
build-with-clang = []

# A storage optimized SMT implemented in trie (https://ouvrard-pierre-alain.medium.com/sparse-merkle-tree-86e6e2fc26da)
trie = []
with-blake2b-rs = ["dep:blake2b-rs"]
with-blake2b-ref = ["dep:blake2b-ref"]

[dependencies]
cfg-if = "1"
blake2b-rs = { version = "0.2", optional = true }
blake2b-ref = { version = "0.3.1", optional = true }

[dev-dependencies]
proptest = "0.9"
criterion = "0.2"
rand = "0.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.65"

[[bench]]
name = "smt_benchmark"
harness = false

[[bench]]
name = "store_counter_benchmark"
harness = false

[build-dependencies]
cc = "1.0"
