[package]
name = "sparse-merkle-tree-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
sparse-merkle-tree = { path = "../", default-features = false, features = [ "std", "with-blake2b-ref" ] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [ "console" ] }
js-sys = "0.3.77"
hex = "0.4.3"
blake2b-ref = "0.3.1"
