[package]
name = "rust-tests"
version = "0.1.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sparse-merkle-tree = { path = "../../" }
blake2b-rs = "0.2"
proptest = "0.9"
criterion = "0.2"
rand = "0.7"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
cc = "1.0"